cip-macros/tests/ui/cip_instance_wrong_type_instance_id.stderr
error: The field 'instance_id' must be of type 'u16'
 --> tests/ui/cip_instance_wrong_type_instance_id.rs:5:18
  |
5 |     instance_id: u32,
  |                  ^^^

error: The field 'class_code' must be of type 'ClassCode'
 --> tests/ui/cip_instance_wrong_type_instance_id.rs:6:17
  |
6 |     class_code: u8,
  |                 ^^

error[E0405]: cannot find trait `CipInstance` in this scope
 --> tests/ui/cip_instance_wrong_type_instance_id.rs:3:1
  |
3 | #[cip_instance]
  | ^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the attribute macro `cip_instance` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `ClassCode` in this scope
 --> tests/ui/cip_instance_wrong_type_instance_id.rs:3:1
  |
3 | #[cip_instance]
  | ^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the attribute macro `cip_instance` (in Nightly builds, run with -Z macro-backtrace for more info)
